--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             background-color: var(--tm-btn-primary-hover-bg);
         }
     </style>
-    <script src="https://unpkg.com/@tonconnect/sdk@latest/dist/tonconnect-sdk.min.js"></script>
+    <script src="https://unpkg.com/@tonconnect/sdk@1.0.0/dist/tonconnect-sdk.min.js"></script>
 </head>
 <body>
     <div class="container">
